Fix wording & spacing

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ a.button:hover {
     color: #000;
     border: 2px solid #000;
 }
-@media only screen and (min-width: 1166px) {
+@media only screen and (min-width: 1167px) {
     a.button {
         width: 300px; 
     }
@@ -225,7 +225,7 @@ section.about-me {
     max-width: 650px;
     margin: 50px;
 }
-@media only screen and (max-width: 1166px) {
+@media only screen and (max-width: 1055px) {
     .about-txt {
         margin: 30px 0px;
     }
@@ -248,6 +248,11 @@ section.about-me {
     height: 300px;
     background-color: #fff;
 }
+@media only screen and (min-width: 1436px) {
+    .proj-descr {
+        margin-top: 20px;
+    }
+}
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -260,8 +265,8 @@ section.about-me {
 @media only screen and (max-width: 1435px) {
     .grid {
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-auto-rows: repeat(2, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        grid-auto-rows: repeat(1, 1fr);
         grid-auto-columns: repeat(1, 1fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
